# bitwise-operation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bits.c  bits.h
include/: bits.h
src/: bits.c
test/: CMakeLists.txt  main.c
